# SOGL

./: .gitignore  CMakeLists.txt  Makefile  README.md  STATUS  checker.c  clip.c  clip.h  clip_slow.c  clip_test.cc  cube.c  draw.h  draw_opengl.c  draw_opengl.h  draw_raster.c  flat.c  gen_dispatch.rb  gen_wrappers.rb  gl.c  gl_stubs.c  glutplane.c  material.c  matrix.c  matrix.h  matrix_test.c  n64.c  normal.c  overlap.c  prim.c  raster.c  raster.h  raster_fast.c  raster_slow.c  raster_test.c  scan_test.cc  simple.c  sogl.h  vector.c  vector.h  window.h  (+3 more)
sample/: cube.c  evaltest.c  flat.c  glutplane.c  movelight.c  normal.c  scene.c  sphere.c
sample/data/: file.osgjs
src/: clip.c  clip.h  clip_slow.c  draw.h  draw_opengl.c  draw_raster.c  gl.c  gl.h  gl_setup_ctx.c  gl_stubs.c  glut.c  glut.h  macro.h  matrix.c  matrix.h  raster.c  raster.h  raster_fast.c  render.c  render.h  vector.c  window.h  window_cgl.c  window_null.c  window_null.h
test/: clip_test.cc  grid.c  matrix_test.c  scan_test.cc
